# digitale-gesamtausgabe

./: .gitignore  .gitlab-ci.yml  Pipfile  README.md  README.rst  build.sh  dev-server.py  dodo.py  extra_filters.py  extra_tests.py  gulpfile.js  package-lock.json  package.json  pelicanconf.py  previewconf.py  publishconf.py  pyproject.toml  static_tei.py  tei_reader.py
.github/workflows/: pages.yml
.gitlab/issue_templates/: Content Error.md
content/: _config.yml  _toc.yml  aktuelles.rst  index.md
content/_static/: footnote.js  image-gallery.js  landing-page.js  popup.js  search.js  style.css  test.js
content/anhang/: abkuerzungen.rst  index.md  siglen.rst
content/digitale-gesamtausgabe/: erzaehlerische-werke.rst  index.md  reiseliteratur.rst
content/editionsprojekt/: editionsprinzipien.rst  kontakt.rst  mitwirkende.rst  rezensionen.rst  textbaende.rst  vorstellung.rst
content/impressum/: datenschutzerklaerung.rst  impressum.rst
content/karl-gutzkow/: bibliographie.rst  lebenschronik.rst  nachtraege-bibliographie.rst  stimmen.rst
content/neuigkeiten/: diakonissin-vergangenheit-gegenwart.rst  jahrestreffen-2017.rst  jahrestreffen-2018.rst  jahrestreffen-2019.rst  kleine-autobiographische-schriften-und-memorabilien.rst  kommentarband-neue-serapionsbrueder.rst  neuer-internetauftritt.rst  novellen-druckband.rst  plan-neuer-internetauftritt.rst  stellenkommentare-naerrin-abschluss.rst  stellenkommentare-naerrin-update.rst  stellenkommentare-naerrin.rst  stellenkommentare-zauberer-von-rom-neuen-serapionsbrueder.rst  ueber-goethe-im-wendepunkte-zweier-jahrhunderte.rst  wally-die-zweiflerin.rst
content/pages/: aktuelles.rst  anhang.rst  datenschutzerklaerung.rst  digitale-gesamtausgabe.rst  editionsprojekt.rst  impressum.rst  karl-gutzkow.rst  kontexte.rst
content/rezensionen/: das-leipziger-stadtmagazin-3-2008.rst  die-zeit-06-03-2003-literatur-s-52.rst  die-zeit-nr-2-literatur-kaleidoskop-03-01-2008-s-50.rst  feuilleton-frankfurter-allgemeine-zeitung-01-02-2002-nr-27-s-46-literatur.rst  frankfurter-rundschau-05-10-2005.rst  germanistik-bd-48-heft-3-4-2007.rst  germanistik-bd-59-heft-3-4-2018.rst  germanistik-bd-60-heft-1-2-2019.rst  germanistik-bd-60-heft-3-4-2019.rst  jahrbuch-der-raabe-gesellschaft-2019.rst  konkret-mai-2003.rst  literaturkritik-de-april-2002.rst  munsterische-zeitung-03-05-2002-kultur.rst  nordwest-zeitung-20-02-2002-nr-43-online-seite.rst  studi-germanici-nr-15-16-2019.rst  stuttgarter-zeitung-26-03-2002-kultur.rst  tages-anzeiger-zurich-16-03-2011.rst
ext/: extra_tests.py  static_tei.py  tei_reader.py
gutzkow_digitale_edition/: __about__.py  __init__.py
gutzkow_digitale_edition/extensions/: __init__.py  config.py  html.py  parser.py  tei.py
orig/: Die Sterbecassirer (Apparat) Wrapped.htm  Die Sterbecassirer (Apparat).htm  Die Sterbecassirer (Text).htm  die-sterbecassirer.apparat.tei  die-sterbecassirer.text.tei
src/: No1T.fodt  No1T.json  No2T.fodt  No2T.json  config.json  notes_2020_05_11.txt
src/NovellenErsterBand/: No1-individual-annotations.tei  No1.tei  No1E.fodt  No1E.json  No1E.tei  No1T-body.tei  No1T-header.tei  No1T.json  SterbecassirerERL.fodt  SterbecassirerERL.json  SterbecassirerERL.tei
src/NovellenZweiterBand/: No2T-body.tei  No2T-header.tei  No2T.json
src/Zg_Worddateien/: config.json
theme/scripts/: image-viewer.js  (+1 more)
util/: extract-apparatus-as-tei.xslt  extract-main-text-as-tei.xslt  html-transform.py  htmltext2tei.py  htmltext2tei.xslt  image-loader.py  iso2utf.py  lexikon-loader.py  pdf-cleaner.py  relabel.py  stats.py  tei-tei-transform.py  text-annotations-link.py  text-body-extract.py  text-extract.py  text-merge.py  validate-tei.py  wrap-by-linenumbers.py  xml-tei-transform.py  xslt-transform.py
(+1209 files in other folders)
