[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gutzkow-digitale-edition"
version = '2.0.0'
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Mark Hall", email = "mark.hall@work.room3b.eu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jupyter-book>=0.15.1"
]

[project.urls]
Documentation = "https://github.com/unknown/gutzkow-digitale-edition#readme"
Issues = "https://github.com/unknown/gutzkow-digitale-edition/issues"
Source = "https://github.com/unknown/gutzkow-digitale-edition"

[tool.hatch.envs.dev]
extra-dependencies = [
  "livereload",
]

[tool.hatch.envs.dev.scripts]
server = "python dev-server.py"
