[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gutzkow-digitale-edition"
version = "2.0.0"
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Mark Hall", email = "mark.hall@work.room3b.eu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "sphinx-favicon>=1.0.0,<2.0.0",
  "uedition>=0.2.0",
]

[project.urls]
Documentation = "https://github.com/unknown/gutzkow-digitale-edition#readme"
Issues = "https://github.com/unknown/gutzkow-digitale-edition/issues"
Source = "https://github.com/unknown/gutzkow-digitale-edition"

[tool.hatch.envs.default.scripts]
build = "jb build content"

[tool.hatch.envs.dev]
extra-dependencies = [
  "livereload",
]

[tool.hatch.envs.dev.scripts]
server = "python dev-server.py"
